...
                    child: Padding(
                      padding: const EdgeInsets.symmetric(horizontal: 30),
                      child: Column(
                        children: [
                          const SizedBox(height: 60),
                          Text(
                            "Kayıt Ol",
                            style: GoogleFonts.inter(
                                fontSize: 25,
                                fontWeight: FontWeight.bold,
                                color: Colors.black
                            ),
                          ),
...
              
                          // AD SOYAD
                          SizedBox(
                            width: width,
                            child: TextFormField(
                                controller: fullNameController,
                                key: Key('signup_name'),
                                style: const TextStyle(color: Colors.black, fontSize: 20),
                                decoration: GlobalStyles.inputDecoration1(hintText: 'Ad Soyad', showError: _showErrorName),
                                onChanged: (value) => clearErrors(),
                                validator: (value) {
                                  final nameSurname = value?.trim();
                                  if (nameSurname!.isEmpty || !RegExp(r'^[a-z A-Z]+$').hasMatch(nameSurname)) {
...
              
                          // EMAİL
                          SizedBox(
                            width: width,
                            child: TextFormField(
                                controller: emailController,
                                key: Key('signup_email'),
                                keyboardType: TextInputType.emailAddress,
                                style: const TextStyle(color: Colors.black, fontSize: 20),
                                decoration: GlobalStyles.inputDecoration1(hintText: 'Email', showError: _showErrorEmail),
                                onChanged: (value) => clearErrors(),
                                validator: (value) {
                                  final email = value?.trim();
...
                          // phone no
                          //todo: Telefon no will not be centered
                          SizedBox(
                            width: width,
                            child: TextFormField(
                                controller: phoneController,
                                key: Key('signup_phone'),
                                inputFormatters: [LengthLimitingTextInputFormatter(10)],
                                keyboardType: TextInputType.phone,
                                style: const TextStyle(color: Colors.black, fontSize: 20),
                                decoration: GlobalStyles.inputDecorationPhone(
                                   showError: _showErrorPhone,
                                  ),
...
              
                          // PAROLA
                          SizedBox(
                            width: width,
                            child: TextFormField(
                              controller: passwordController,
                              key: Key('signup_password'),
                              style: const TextStyle(color: Colors.black, fontSize: 20),
                              decoration: GlobalStyles.inputDecoration1(
                                  hintText: 'Parola', showError: _showErrorPassword),
                                  onChanged: (value) => clearErrors(),
                              validator: (value) {
                                final password = value?.trim();
...
                          // PAROLA TEKRAR
                          SizedBox(
                            width: width,
                            child: Focus(
                              child: TextFormField(
                                controller: confirmPasswordController,
                                key: Key('signup_password_again'),
                                style: const TextStyle(color: Colors.black, fontSize: 20),
                                decoration: GlobalStyles.inputDecoration1(
                                    hintText: 'Parola Tekrar',
                                    showError: _showErrorRePassword),
                                    onChanged: (value) => clearErrors(),
                                validator: (value) {
...
                              ),
                            ],
                          ),
                          const SizedBox(height: 50.0),
              
                          PlatformElevatedButton(
                            key: Key('signup_button'),
                            onPressed: () async {
                              if (formkey.currentState!.validate()) {
                                await signUpUser();
                              }
                            },
                            child: Text(
...
