...
        height: height * 0.07,
        color: background,
        padding: const EdgeInsets.only(top: 15),
        child: Row(
          children: [
            Text(
              "Kalecilerimiz",
              style: GoogleFonts.inter(fontSize: 26, fontWeight: FontWeight.w700, color: Colors.black),
              textScaler: TextScaler.linear(ScaleSize.textScaleFactor(context)),
            ),
            const SizedBox(width: 10),
            Icon(Icons.handshake, size: iconSize),
            const Spacer(),
...
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              Icon(Icons.search, size: iconSize, color: Colors.grey.shade500),
              const SizedBox(height: 10),
              Text(
                'İlgili sonuç bulunamadı',
                style: GoogleFonts.inter(
                    fontSize: 22,
                    fontWeight: FontWeight.w700,
                    color: Colors.black
                ),
                textScaler: TextScaler.linear(ScaleSize.textScaleFactor(context)),
...
